bump jogl and run tests on m1